--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./Assets/profile-pic.png" alt="Andrey's Profile Picture">
+            <img src="./Assets/profile-cat.png" alt="Andrey's Profile Picture">
         </div>
         <div class="section__text">
-            <p class="section__text__p1">Приввет! Меня зовут</p>
+            <p class="section__text__p1">Привет! Меня зовут</p>
             <h1 class="title">Андрей Колмыков</h1>
             <p class="section__text__p2">QA Engineer</p>
             <div class="btn-container">
@@ -71,7 +71,7 @@
         <h1 class="title">Обо мне</h1>
         <div class="section-container">
             <div class="section__pic-container">
-                <img src="./Assets/IMG_6897.jpg" 
+                <img src="./Assets/about-cat.png" 
                 alt="Profile picture"
                 class="about-pic">
             </div>
