--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p class="section__text__p2">QA Engineer</p>
             <div class="btn-container">
                 <button class="btn btn-color-2" 
-                onclick="window.open('./Assets/resume-example.pdf')"
+                onclick="window.open('./Assets/profile-cat.png')"
                 >Резюме
                 </button>
                 <button 
