--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         alt="Experience icon"
                         class="icon">
                         <h3>Опыт</h3>
-                        <p>Здесь будет <br>очень изящно придуманный опыт</p>
+                        <p>Здесь будет <br>очень изящно расписанный опыт</p>
                     </div>
                     <div class="details-container">
                         <img src="./Assets/education.png" 
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>Здесь будет параграф с очень big и important достижениями</p>
+                    <p>Тут будет информация с очень big и important достижениями</p>
                 </div>
             </div>
         </div>
